kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx-web
        image: dsurov/h1nginx:v0.4
        ports:
        - containerPort: 8000
        readinessProbe:
         httpGet:
          path: /index.html
          port: 8000
         initialDelaySeconds: 5
         periodSeconds: 10
        volumeMounts:
        - name: mydir
          mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ["rm", "-f", "/homework/index.html"]
      volumes:
      - name: mydir
        emptyDir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
